unpackaged/main/default/objects/Dealer_Resources__c/Dealer_Resources__c.object-meta.xml
<CustomObject>
    <label>Dealer Resource</label>
    <nameField>
        <label>Company</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>