unpackaged/main/default/objects/Dealer_Resources__c/fields/Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_1__c</fullName>
    <label>Contact 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>