unpackaged/main/default/objects/Dealer_Resources__c/fields/Contact_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_1_Email__c</fullName>
    <label>Contact 1 Email</label>
    <type>Email</type>
</CustomField>