unpackaged/main/default/objects/Dealer_Resources__c/fields/Contact_1_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_1_Mobile__c</fullName>
    <label>Contact 1 Mobile</label>
    <type>Phone</type>
</CustomField>