unpackaged/main/default/objects/Dealer_Resources__c/fields/Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_2__c</fullName>
    <label>Contact 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>