unpackaged/main/default/objects/Dealer_Resources__c/fields/Contact_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_2_Email__c</fullName>
    <label>Contact 2 Email</label>
    <type>Email</type>
</CustomField>