unpackaged/main/default/objects/Dealer_Resources__c/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <label>Discipline</label>
    <length>100</length>
    <type>Text</type>
</CustomField>