unpackaged/main/default/objects/Dealer_Resources__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Discipline__c</columns>
    <columns>NAME</columns>
    <columns>Contact_1__c</columns>
    <columns>Company_Phone__c</columns>
    <columns>Contact_1_Email__c</columns>
    <columns>Website__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>